# TormentNexus

./: .borg_startup_marker  .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .hypercode-session.json  .tormentnexus_queue.db  AGENTS.md  AGENT_AUTOMATABLE_SIDE_HUSTLES.md  AGENT_MONEY_MACHINE_NON_TECH_AND_TRADING.md  ANALYSIS.md  ANALYSIS_GO_PORT.md  BORG_FEATURE_ASSESSMENT.md  CHANGELOG.md  CLAUDE.md  CODex-FreeLLM.md  Codex-FreeLLM-Windows.md  DEPLOY.md  Dockerfile  Dockerfile.prod  GEMINI.md  GPT.md  HANDOFF.md  IDEAS.md  MEMORY.md  Makefile  PORTING_MAP.md  README.md  ROADMAP.md  SUBMODULES_INDEX.md  SUBMODULE_INVENTORY.md  TODO.md  TORMENTNEXUS_ATLAS_CROSS_SYSTEM_INTELLIGENCE.md  TORMENTNEXUS_FEATURE_ASSESSMENT.md  TORMENTNEXUS_MASTER_INDEX.jsonc  VERSION  VERSION.md  VISION.md  build.bat  (+33 more)
.hypercode/: sectioned_memory.json  shell_history.json
.memory/: state.yaml
.pi/: caps-context-state.json
.pi-lens/: change-log.jsonl  code-quality-warnings.jsonl  metrics-history.json  turn-state.json  worklog.jsonl
.tormentnexus/: project.db
agent/: agent.go  orchestrator.go  pipe.go
agents/: auton.go  codemode.go  director.go  director_test.go  disclosure.go  interfaces.go  provider.go  provider_stub.go  provider_tormentnexus.go
borg/: package.json  pnpm-lock.yaml
cli/: mcp-router-cli.ts
cmd/: foundation.go  foundation_http.go  foundation_http_test.go  mcp.go  pipe.go  root.go  serve.go  tui.go
config/: mcp_servers.json  mcp_servers.lkg.json
context_portal/: context.db
data/: assimilation_state.db  swarm_state.db  trends.db
docs/: A2A_AGENT_SDK_EVALUATION.md  API_ENDPOINTS.md  ARCHITECTURE.md  BUILTIN_TOOLS_EVIDENCE_LOCK.md  BUILTIN_TOOLS_FIRST_CLASS_PARITY.md  GLOBAL_LIBRARY_INDEX.md  LAUNCH_POSTS.md  (+21 more)
go/submodules/mnem/crates/mnem-py/: Cargo.toml
(+4124 files in other folders)
